# atmorad-py

./: .gitignore  CITATION.cff  LICENSE  README.md  config.toml  default_config.toml  demo_config.toml  helpers.py  main.py  monte_carlo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: adjacency_effect.py  adjacency_effect.toml  custom_detector.py  custom_environment.py  load_netcdf.py  load_results.py
results/: metadata.json
src/: atmoshpere.py  atmosphere.py  boundaries.py  config.py  constants.py  data_io.py  physics.py  results.py  scene.py  simulation.py  surface.py
src/atmorad/: __init__.py  analyzer.py  api.py  atmosphere.py  builder.py  cli.py  config.py  constants.py  data_io.py  registry.py  results.py  runner.py  scene.py  simulation.py  simulator.py  surface.py
src/atmorad/config/: __init__.py  config.py  default_config.toml  defaults.toml  loader.py  materials.toml  models.py  parser.py  schema.py  schemas.py  simulation.toml
src/atmorad/detectors/: __init__.py  absorption_profile.py  absorption_vertical.py  atmosphere_heating.py  base.py  boundary_flux.py  builder.py  energy_budget.py  fate.py  flux.py  flux_1d.py  flux_maps.py  flux_profile.py  flux_vertical.py  heating.py  path_tracking.py  paths.py  plane_flux.py  results.py  surface_absorption.py  surface_hits.py  surface_toa_flux.py  trajectories.py  vertical_absorption.py  vertical_flux.py
src/atmorad/engine/: __init__.py  batch.py  core.py  engine.py  runner.py
src/atmorad/environment/: __init__.py  atmosphere.py  registry.py  scene.py  surface.py  surface_maps.py
src/atmorad/io/: data_io.py
src/physics/: __init__.py  geometry.py  reflection.py  scattering.py
tests/: basic_tests.py  conftest.py  examples.py  test_basic.py  test_examples.py  test_io.py
tests/configs/: demo_config.toml  non_square.toml  test_config.toml
(+16 files in other folders)
