[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atmorad-py"
version = "0.1.0"
description = "A 3D monte carlo simulation of Atmospheric Radiative Transfer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "cmocean>=2.0.0",
    "seaborn>=0.12.0",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
