[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "atmorad-py"
dynamic = ["version"]
description = "A 3D monte carlo simulation of Atmospheric Radiative Transfer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Karol Dąbrowski", email = "atmorad@kdabr.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26.0",
    "matplotlib>=3.5.1",
    "seaborn>=0.11.0",
    "cmocean>=2.0.0",
    "tqdm>=4.60.0",
    "pydantic>=2.5.0",
    "xarray>=2024.12.0",
    "h5netcdf>=1.8.0",
    "h5py>=3.16.0",
]

[project.scripts]
atmorad = "atmorad.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/atmorad"]
include-package-data = true


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore "unused import" (F401) in all __init__.py files
"__init__.py" = ["F401"]
